--- a/views/main_not_logged.html
+++ b/views/main_not_logged.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="main.css"/>
+<link rel="stylesheet" href="/public/css/main.css"/>
 <script src="main.js"></script>
 <html>
     <title>
@@ -11,7 +11,7 @@
                 <div class = "headercontent">
                     <div class="headerhome">
                         <div class="websitelogo">
-                            <a href="/main.html"><img src="/images main/byte_logo.png"/></a>
+                            <a href="/main.html"><img src="/public/img/byte_logo.png"/></a>
                             <span class = "link"> <a style = "color: beige; text-decoration: none" href = "./main.html"> byte. </a> </span>
                         </div>
                     </div>
@@ -37,12 +37,12 @@
                 </div>
                 <div class="createpostpic">
                     <a href="./Sign_up.html">
-                    <img src="./images main/image-alt-regular-24.png"/>
+                    <img src="/public/img/image-alt-regular-24.png"/>
                     </a>
                 </div>
                 <div class="createpostattach">
                     <a href="./Sign_up.html">
-                    <img src="./images main/folder-plus-regular-24.png"/>
+                    <img src="/public/img/folder-plus-regular-24.png"/>
                     </a>
                 </div>
             </div>
@@ -61,12 +61,12 @@
                 </div>
                 <div class="newposts">
                     <a href="./Sign_up.html">
-                    <img src="./images main/badge-regular-24.png">
+                    <img src="/public/img/badge-regular-24.png">
                     </a>
                 </div>
                 <div class="hotposts">
                     <a href="./Sign_up.html">
-                    <img src="./images main/hot-solid-24.png">
+                    <img src="/public/img/hot-solid-24.png">
                     </a>
                 </div>
             </div>
@@ -74,7 +74,7 @@
                 <div class="postheader">
                     <div class="communityposticonholder">
                         <div class="communityposticon">
-                            <img src="./images main/apple_logo.jpg"/>
+                            <img src="/public/img/apple_logo.jpg"/>
                         </div>
                     </div>
                     <div class="userpostname">
@@ -92,20 +92,20 @@
                     <span>it good :D</span>
                 </div>
                 <div class="postpicturecontent">
-                    <img src="./images main/gojowithiphone1.png"/>
+                    <img src="/public/img/gojowithiphone1.png"/>
                 </div>
                 <div class="postfooter">
                     <div class="upbit">
-                        <img src="./images main/up-arrow-regular-24.png"/>
+                        <img src="/public/img/up-arrow-regular-24.png"/>
                     </div>
                     <div class="downbit">
-                        <img src="./images main/down-arrow-regular-24.png"/>
+                        <img src="/public/img/down-arrow-regular-24.png"/>
                     </div>
                     <div class="comment">
-                        <img src="./images main/comment-regular-24.png"/>
+                        <img src="/public/img/comment-regular-24.png"/>
                     </div>
                     <div class="share">
-                        <img src="./images main/share-regular-24.png"/>
+                        <img src="/public/img/share-regular-24.png"/>
                     </div>
                     <div class="commentcounter">
                         <span><a href="./samplepost2.html">0 replies</a></span>
@@ -117,7 +117,7 @@
                 <div class="postheader">
                     <div class="communityposticonholder">
                         <div class="communityposticon">
-                            <img src="./images main/apple_logo.jpg"/>
+                            <img src="/public/img/apple_logo.jpg"/>
                         </div>
                     </div>
                     <div class="userpostname">
@@ -139,16 +139,16 @@
                 </div>
                 <div class="postfooter">
                     <div class="upbit">
-                        <img src="./images main/up-arrow-regular-24.png"/>
+                        <img src="/public/img/up-arrow-regular-24.png"/>
                     </div>
                     <div class="downbit">
-                        <img src="./images main/down-arrow-regular-24.png"/>
+                        <img src="/public/img/down-arrow-regular-24.png"/>
                     </div>
                     <div class="comment">
-                        <img src="./images main/comment-regular-24.png"/>
+                        <img src="/public/img/comment-regular-24.png"/>
                     </div>
                     <div class="share">
-                        <img src="./images main/share-regular-24.png"/>
+                        <img src="/public/img/share-regular-24.png"/>
                     </div>
                     <div class="commentcounter">
                         <span><a href="./samplepost3.html">1 reply</a></span>
@@ -160,7 +160,7 @@
                 <div class="postheader">
                     <div class="communityposticonholder">
                         <div class="communityposticon">
-                            <img src="./images main/webdevicon.png"/>
+                            <img src="/public/img/webdevicon.png"/>
                         </div>
                     </div>
                     <div class="userpostname">
@@ -182,16 +182,16 @@
                 </div>
                 <div class="postfooter">
                     <div class="upbit">
-                        <img src="./images main/up-arrow-regular-24.png"/>
+                        <img src="/public/img/up-arrow-regular-24.png"/>
                     </div>
                     <div class="downbit">
-                        <img src="./images main/down-arrow-regular-24.png"/>
+                        <img src="/public/img/down-arrow-regular-24.png"/>
                     </div>
                     <div class="comment">
-                        <img src="./images main/comment-regular-24.png"/>
+                        <img src="/public/img/comment-regular-24.png"/>
                     </div>
                     <div class="share">
-                        <img src="./images main/share-regular-24.png"/>
+                        <img src="/public/img/share-regular-24.png"/>
                     </div>
                     <div class="commentcounter">
                         <span><a href="./samplepost1.html">1 reply</a></span>
@@ -203,7 +203,7 @@
                 <div class="postheader">
                     <div class="communityposticonholder">
                         <div class="communityposticon">
-                            <img src="./images main/pcmrlogo.png"/>
+                            <img src="/public/img/pcmrlogo.png"/>
                         </div>
                     </div>
                     <div class="userpostname">
@@ -225,16 +225,16 @@
                 </div>
                 <div class="postfooter">
                     <div class="upbit">
-                        <img src="./images main/up-arrow-regular-24.png"/>
+                        <img src="/public/img/up-arrow-regular-24.png"/>
                     </div>
                     <div class="downbit">
-                        <img src="./images main/down-arrow-regular-24.png"/>
+                        <img src="/public/img/down-arrow-regular-24.png"/>
                     </div>
                     <div class="comment">
-                        <img src="./images main/comment-regular-24.png"/>
+                        <img src="/public/img/comment-regular-24.png"/>
                     </div>
                     <div class="share">
-                        <img src="./images main/share-regular-24.png"/>
+                        <img src="/public/img/share-regular-24.png"/>
                     </div>
                     <div class="commentcounter">
                         <span><a href="./samplepost5.html">1 reply</a></span>
@@ -246,7 +246,7 @@
                 <div class="postheader">
                     <div class="communityposticonholder">
                         <div class="communityposticon">
-                            <img src="./images main/pcbuildinglogo.png"/>
+                            <img src="/public/img/pcbuildinglogo.png"/>
                         </div>
                     </div>
                     <div class="userpostname">
@@ -279,16 +279,16 @@
                 </div>
                 <div class="postfooter">
                     <div class="upbit">
-                        <img src="./images main/up-arrow-regular-24.png"/>
+                        <img src="/public/img/up-arrow-regular-24.png"/>
                     </div>
                     <div class="downbit">
-                        <img src="./images main/down-arrow-regular-24.png"/>
+                        <img src="/public/img/down-arrow-regular-24.png"/>
                     </div>
                     <div class="comment">
-                        <img src="./images main/comment-regular-24.png"/>
+                        <img src="/public/img/comment-regular-24.png"/>
                     </div>
                     <div class="share">
-                        <img src="./images main/share-regular-24.png"/>
+                        <img src="/public/img/share-regular-24.png"/>
                     </div>
                     <div class="commentcounter">
                         <span><a href="./samplepost4.html">1 reply</a></span>
