--- a/views/main.html
+++ b/views/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="/main.css"/>
+<link rel="stylesheet" href="/public/css/main.css"/>
 <html>
     <title>
         Byte | Home 
@@ -10,7 +10,7 @@
                 <div class = "headercontent">
                     <div class="headerhome">
                         <div class="websitelogo">
-                            <a href="/main.html"><img src="/images main/byte_logo.png"/></a>
+                            <a href="/main.html"><img src="/public/img/byte_logo.png"/></a>
                             <span class = "link"> <a style = "color: beige; text-decoration: none" href = "/main.html"> byte. </a> </span>
                         </div>
                     </div>
@@ -22,7 +22,7 @@
                             <div class="profileicon">
                                 <div class="profileiconholder">
                                     <a href="/profilepage2.html">
-                                    <img src="/images main/pfp.jpg"/>
+                                    <img src="/public/img/pfp.jpg"/>
                                     </a>
                                 </div>
                             </div>
@@ -45,7 +45,7 @@
             <div class="createpost">
                 <div class="createposticon">
                     <div class="createpostusericonholder">
-                        <img src="/images main/pfp.jpg"/>
+                        <img src="/public/img/pfp.jpg"/>
                     </div>
                 </div>
                 <div class="createposttext">
@@ -53,12 +53,12 @@
                 </div>
                 <div class="createpostpic">
                     <a href="/CreatePost.html">
-                    <img src="/images main/image-alt-regular-24.png"/>
+                    <img src="/public/img/image-alt-regular-24.png"/>
                     </a>
                 </div>
                 <div class="createpostattach">
                     <a href="/CreatePost.html">
-                    <img src="/images main/folder-plus-regular-24.png"/>
+                    <img src="/public/img/folder-plus-regular-24.png"/>
                     </a>
                 </div>
             </div>
@@ -77,12 +77,12 @@
                 </div>
                 <div class="newposts">
                     <a href="/main.html">
-                    <img src="/images main/badge-regular-24.png">
+                    <img src="/public/img/badge-regular-24.png">
                     </a>
                 </div>
                 <div class="hotposts">
                     <a href="/main.html">
-                    <img src="/images main/hot-solid-24.png">
+                    <img src="/public/img/hot-solid-24.png">
                     </a>
                 </div>
             </div>
@@ -90,7 +90,7 @@
                 <div class="postheader">
                     <div class="communityposticonholder">
                         <div class="communityposticon">
-                            <img src="/images main/apple_logo.jpg"/>
+                            <img src="/public/img/apple_logo.jpg"/>
                         </div>
                     </div>
                     <div class="userpostname">
@@ -108,20 +108,20 @@
                     <span>it good :D</span>
                 </div>
                 <div class="postpicturecontent">
-                    <img src="/images main/gojowithiphone1.png"/>
+                    <img src="/public/img/gojowithiphone1.png"/>
                 </div>
                 <div class="postfooter">
                     <div class="upbit">
-                        <img src="/images main/up-arrow-regular-24.png"/>
+                        <img src="/public/img/up-arrow-regular-24.png"/>
                     </div>
                     <div class="downbit">
-                        <img src="/images main/down-arrow-regular-24.png"/>
+                        <img src="/public/img/down-arrow-regular-24.png"/>
                     </div>
                     <div class="comment">
-                        <img src="/images main/comment-regular-24.png"/>
+                        <img src="/public/img/comment-regular-24.png"/>
                     </div>
                     <div class="share">
-                        <img src="/images main/share-regular-24.png"/>
+                        <img src="/public/img/share-regular-24.png"/>
                     </div>
                     <div class="commentcounter">
                         <span><a href="/samplepost2.html">0 replies</a></span>
@@ -133,7 +133,7 @@
                 <div class="postheader">
                     <div class="communityposticonholder">
                         <div class="communityposticon">
-                            <img src="/images main/apple_logo.jpg"/>
+                            <img src="/public/img/apple_logo.jpg"/>
                         </div>
                     </div>
                     <div class="userpostname">
@@ -155,16 +155,16 @@
                 </div>
                 <div class="postfooter">
                     <div class="upbit">
-                        <img src="/images main/up-arrow-regular-24.png"/>
+                        <img src="/public/img/up-arrow-regular-24.png"/>
                     </div>
                     <div class="downbit">
-                        <img src="/images main/down-arrow-regular-24.png"/>
+                        <img src="/public/img/down-arrow-regular-24.png"/>
                     </div>
                     <div class="comment">
-                        <img src="/images main/comment-regular-24.png"/>
+                        <img src="/public/img/comment-regular-24.png"/>
                     </div>
                     <div class="share">
-                        <img src="/images main/share-regular-24.png"/>
+                        <img src="/public/img/share-regular-24.png"/>
                     </div>
                     <div class="commentcounter">
                         <span><a href="/samplepost3.html">1 reply</a></span>
@@ -176,7 +176,7 @@
                 <div class="postheader">
                     <div class="communityposticonholder">
                         <div class="communityposticon">
-                            <img src="/images main/webdevicon.png"/>
+                            <img src="/public/img/webdevicon.png"/>
                         </div>
                     </div>
                     <div class="userpostname">
@@ -198,16 +198,16 @@
                 </div>
                 <div class="postfooter">
                     <div class="upbit">
-                        <img src="/images main/up-arrow-regular-24.png"/>
+                        <img src="/public/img/up-arrow-regular-24.png"/>
                     </div>
                     <div class="downbit">
-                        <img src="/images main/down-arrow-regular-24.png"/>
+                        <img src="/public/img/down-arrow-regular-24.png"/>
                     </div>
                     <div class="comment">
-                        <img src="/images main/comment-regular-24.png"/>
+                        <img src="/public/img/comment-regular-24.png"/>
                     </div>
                     <div class="share">
-                        <img src="/images main/share-regular-24.png"/>
+                        <img src="/public/img/share-regular-24.png"/>
                     </div>
                     <div class="commentcounter">
                         <span><a href="/samplepost1.html">1 reply</a></span>
@@ -219,7 +219,7 @@
                 <div class="postheader">
                     <div class="communityposticonholder">
                         <div class="communityposticon">
-                            <img src="/images main/pcmrlogo.png"/>
+                            <img src="/public/img/pcmrlogo.png"/>
                         </div>
                     </div>
                     <div class="userpostname">
@@ -241,16 +241,16 @@
                 </div>
                 <div class="postfooter">
                     <div class="upbit">
-                        <img src="/images main/up-arrow-regular-24.png"/>
+                        <img src="/public/img/up-arrow-regular-24.png"/>
                     </div>
                     <div class="downbit">
-                        <img src="/images main/down-arrow-regular-24.png"/>
+                        <img src="/public/img/down-arrow-regular-24.png"/>
                     </div>
                     <div class="comment">
-                        <img src="/images main/comment-regular-24.png"/>
+                        <img src="/public/img/comment-regular-24.png"/>
                     </div>
                     <div class="share">
-                        <img src="/images main/share-regular-24.png"/>
+                        <img src="/public/img/share-regular-24.png"/>
                     </div>
                     <div class="commentcounter">
                         <span><a href="/samplepost5.html">1 reply</a></span>
@@ -262,7 +262,7 @@
                 <div class="postheader">
                     <div class="communityposticonholder">
                         <div class="communityposticon">
-                            <img src="/images main/pcbuildinglogo.png"/>
+                            <img src="/public/img/pcbuildinglogo.png"/>
                         </div>
                     </div>
                     <div class="userpostname">
@@ -295,16 +295,16 @@
                 </div>
                 <div class="postfooter">
                     <div class="upbit">
-                        <img src="/images main/up-arrow-regular-24.png"/>
+                        <img src="/public/img/up-arrow-regular-24.png"/>
                     </div>
                     <div class="downbit">
-                        <img src="/images main/down-arrow-regular-24.png"/>
+                        <img src="/public/img/down-arrow-regular-24.png"/>
                     </div>
                     <div class="comment">
-                        <img src="/images main/comment-regular-24.png"/>
+                        <img src="/public/img/comment-regular-24.png"/>
                     </div>
                     <div class="share">
-                        <img src="/images main/share-regular-24.png"/>
+                        <img src="/public/img/share-regular-24.png"/>
                     </div>
                     <div class="commentcounter">
                         <span><a href="/samplepost4.html">1 reply</a></span>
