--- a/views/profilepage4.html
+++ b/views/profilepage4.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title> Profile page </title>
-    <link rel="stylesheet" type="text/css" href="profilepage.css" />
+    <link rel="stylesheet" type="text/css" href="/public/css/profilepage.css" />
 </head>
 <body>
     <div class="homecontainer">
@@ -10,7 +10,7 @@
             <div class = "headercontent">
                 <div class="headerhome">
                     <div class="websitelogo">
-                        <a href="./main.html"><img src="./images main/byte_logo.png"/></a>
+                        <a href="./main.html"><img src="/public/img/byte_logo.png"/></a>
                         <span class = "link"> <a style = "color: beige; text-decoration: none" href = "./main.html"> byte. </a> </span>
                     </div>
                 </div>
@@ -22,7 +22,7 @@
                         <div class="profileicon">
                             <div class="profileiconholder">
                                 <a href="./profilepage2.html">
-                                <img src="./images main/pfp.jpg"/>
+                                <img src="/public/img/pfp.jpg"/>
                                 </a>
                             </div>
                         </div>
@@ -45,7 +45,7 @@
             <div class="profilecontainer1">
                 <div class="userinfo">
                     <div class="userpfp">
-                        <img class="userimg" src="./images main/goatkotsu.png" />
+                        <img class="userimg" src="/public/img/goatkotsu.png" />
                     </div>
                     <div class="editbutton"> <a href=""> Edit </a></a></div>
                 </div>
@@ -67,12 +67,12 @@
                 <div class="latestpost"> 
                     <div class="latestpostinfo">
                         <div class="latestpostpfp"> 
-                            <a href="profilepage4.html"> <img class="userimg" src="./images main/goatkotsu.png"/> </a>
+                            <a href="./profilepage4.html"> <img class="userimg" src="/public/img/goatkotsu.png"/> </a>
                         </div>
                         <p> Goatkotsu <br> <span style="padding: 5px;">u/yutaokkotsu</span><br> Bits: 100</p>
                     </div>
                     <div class="latestpostsdetails"> 
-                        <h4> <a href="samplepost4.html"> What are the ideal specs for a PC in 2023? </a> </h4> 
+                        <h4> <a href="./samplepost4.html"> What are the ideal specs for a PC in 2023? </a> </h4> 
                         <p> I'm thinking of building my own PC within the next couple months once I save up enough money and I need some second opinions on if the PC hardware I'm looking at would run games like Minecraft, Overwatch 2, COD, etc. smoothly/around 1080p. I'll most likely be using it for uni assignments and general browsing on the side, too. I've been looking at these specs for my build: </p>
                     </div>
                 </div>
