--- a/views/profilepage7.html
+++ b/views/profilepage7.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title> Profile page </title>
-    <link rel="stylesheet" type="text/css" href="profilepage.css" />
+    <link rel="stylesheet" type="text/css" href="/public/css/profilepage.css" />
 </head>
 <body>
     <div class="homecontainer">
@@ -10,7 +10,7 @@
             <div class = "headercontent">
                 <div class="headerhome">
                     <div class="websitelogo">
-                        <a href="./main.html"><img src="./images main/byte_logo.png"/></a>
+                        <a href="./main.html"><img src="/public/img/byte_logo.png"/></a>
                         <span class = "link"> <a style = "color: beige; text-decoration: none" href = "./main.html"> byte. </a> </span>
                     </div>
                 </div>
@@ -22,7 +22,7 @@
                         <div class="profileicon">
                             <div class="profileiconholder">
                                 <a href="./profilepage2.html">
-                                <img src="./images main/pfp.jpg"/>
+                                <img src="/public/img/pfp.jpg"/>
                                 </a>
                             </div>
                         </div>
@@ -45,7 +45,7 @@
             <div class="profilecontainer1">
                 <div class="userinfo">
                     <div class="userpfp">
-                        <img class="userimg" src="./images main/rickastley.PNG" />
+                        <img class="userimg" src="/public/img/rickastley.PNG" />
                     </div>
                     <div class="editbutton"> <a href=""> Edit </a></a></div>
                 </div>
