--- a/views/samplepost2.html
+++ b/views/samplepost2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title> View post </title>
-    <link rel="stylesheet" type="text/css" href="viewpost.css" />
+    <link rel="stylesheet" type="text/css" href="/public/css/viewpost.css" />
 </head>
 
 <body>
@@ -11,7 +11,7 @@
             <div class = "headercontent">
                 <div class="headerhome">
                     <div class="websitelogo">
-                        <a href="./main.html"><img src="./images main/byte_logo.png"/></a>
+                        <a href="./main.html"><img src="/public/img/byte_logo.png"/></a>
                         <span class = "link"> <a style = "color: beige; text-decoration: none" href = "./main.html"> byte. </a> </span>
                     </div>
                 </div>
@@ -23,7 +23,7 @@
                         <div class="profileicon">
                             <div class="profileiconholder">
                                 <a href="./profilepage2.html">
-                                <img src="./images main/pfp.jpg"/>
+                                <img src="/public/img/pfp.jpg"/>
                                 </a>
                             </div>
                         </div>
@@ -49,7 +49,7 @@
                     <h5> b/Apple </h5>
                 </div>
                 <div class ="userpfp">
-                    <a href="profilepage2.html"> <img class="userimg" src="./images main/pfp.jpg"> </a>
+                    <a href="profilepage2.html"> <img class="userimg" src="/public/img/pfp.jpg"> </a>
                     
                 </div>
                 <div class="postuserinfo"> 
@@ -63,7 +63,7 @@
             <div class="postinfocontainer">
                 <h4> Apple just dropped the new iPhone 16!!!</h4>
                 <p> it good :D</p>
-                <img src="./images main/gojowithiphone1.png">
+                <img src="/public/img/gojowithiphone1.png">
                 <div class="replybutton"> <a href=""> Reply </a> </div>
             </div>
         </div>
