--- a/views/profilepage1.html
+++ b/views/profilepage1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title> Profile page </title>
-    <link rel="stylesheet" type="text/css" href="profilepage.css" />
+    <link rel="stylesheet" type="text/css" href="/public/css/profilepage.css" />
 </head>
 <body>
     <div class="homecontainer">
@@ -10,7 +10,7 @@
             <div class = "headercontent">
                 <div class="headerhome">
                     <div class="websitelogo">
-                        <a href="./main.html"><img src="./images main/byte_logo.png"/></a>
+                        <a href="./main.html"><img src="/public/img/byte_logo.png"/></a>
                         <span class = "link"> <a style = "color: beige; text-decoration: none" href = "./main.html"> byte. </a> </span>
                     </div>
                 </div>
@@ -22,7 +22,7 @@
                         <div class="profileicon">
                             <div class="profileiconholder">
                                 <a href="./profilepage2.html">
-                                <img src="./images main/pfp.jpg"/>
+                                <img src="/public/img/pfp.jpg"/>
                                 </a>
                             </div>
                         </div>
@@ -46,7 +46,7 @@
             <div class="profilecontainer1">
                 <div class="userinfo">
                     <div class="userpfp">
-                        <img class="userimg" src="./images main/AYAKA.jpg" />
+                        <img class="userimg" src="/public/img/AYAKA.jpg" />
                     </div>
                     <div class="editbutton"> <a href=""> Edit </a></a></div>
                 </div>
@@ -70,12 +70,12 @@
                 <div class="latestpost"> 
                     <div class="latestpostinfo">
                         <div class="latestpostpfp"> 
-                            <a href="profilepage1.html"> <img class="userimg" src="./images main/AYAKA.jpg"/> </a>
+                            <a href="./profilepage1.html"> <img class="userimg" src="/public/img/AYAKA.jpg"/> </a>
                         </div>
                         <p> Wala_3h <br> <span style="padding: 5px;">u/WalaEh</span><br> Bits: 1</p>
                     </div>
                     <div class="latestpostsdetails"> 
-                        <h4> <a href="samplepost1.html"> MDN is very convenient </a> </h4> 
+                        <h4> <a href="./samplepost1.html"> MDN is very convenient </a> </h4> 
                         <p> It really helped us in creating this website! It gave a fast and easy way to access information to different elements. ^_^ </p>
                     </div>
                 </div>
