--- a/views/profilepage3.html
+++ b/views/profilepage3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title> Profile page </title>
-    <link rel="stylesheet" type="text/css" href="profilepage.css" />
+    <link rel="stylesheet" type="text/css" href="/public/css/profilepage.css" />
 </head>
 <body>
     <div class="homecontainer">
@@ -10,7 +10,7 @@
             <div class = "headercontent">
                 <div class="headerhome">
                     <div class="websitelogo">
-                        <a href="./main.html"><img src="./images main/byte_logo.png"/></a>
+                        <a href="./main.html"><img src="/public/img/byte_logo.png"/></a>
                         <span class = "link"> <a style = "color: beige; text-decoration: none" href = "./main.html"> byte. </a> </span>
                     </div>
                 </div>
@@ -22,7 +22,7 @@
                         <div class="profileicon">
                             <div class="profileiconholder">
                                 <a href="./profilepage2.html">
-                                <img src="./images main/pfp.jpg"/>
+                                <img src="/public/img/pfp.jpg"/>
                                 </a>
                             </div>
                         </div>
@@ -45,7 +45,7 @@
             <div class="profilecontainer1">
                 <div class="userinfo">
                     <div class="userpfp">
-                        <img class="userimg" src="./images main/sukunayes.png" />
+                        <img class="userimg" src="/public/img/sukunayes.png" />
                     </div>
                     <div class="editbutton"> <a href=""> Edit </a></a></div>
                 </div>
@@ -67,12 +67,12 @@
                 <div class="latestpost"> 
                     <div class="latestpostinfo">
                         <div class="latestpostpfp"> 
-                            <a href="profilepage3.html"> <img class="userimg" src="./images main/sukunayes.png"/> </a>
+                            <a href="./profilepage3.html"> <img class="userimg" src="/public/img/sukunayes.png"/> </a>
                         </div>
                         <p> SukunaWithNokia <br> <span style="padding: 5px;">u/sukunaryomen</span><br> Bits: 0</p>
                     </div>
                     <div class="latestpostsdetails"> 
-                        <h4> <a href="samplepost3.html"> Sell me on the iphone </a> </h4> 
+                        <h4> <a href="./samplepost3.html"> Sell me on the iphone </a> </h4> 
                         <p> I have an android right now and i love the thing to death. I have encountered zero problems with it. I had an iphone once and hated it. But it was the 4 or 4s. All of my friends have iphones and they live in a different state so I know getting an iphone would make it easier for us to communicate. The only problem I have with the iphones are that every time I get new music I have to resynce my whole phone just to add a couple songs or albums. With photos I had to use the photos app and again sync my phone in order to get them off the phone. With Android all I have to do is click and drag both my photos and music and in less than 30 seconds I am done. So r/apple sell on why I should get an ihpone </p>
                     </div>
                 </div>
