--- a/views/samplepost1.html
+++ b/views/samplepost1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title> View post </title>
-    <link rel="stylesheet" type="text/css" href="viewpost.css" />
+    <link rel="stylesheet" type="text/css" href="/public/css/viewpost.css" />
 </head>
 
 <body>
@@ -11,7 +11,7 @@
             <div class = "headercontent">
                 <div class="headerhome">
                     <div class="websitelogo">
-                        <a href="./main.html"><img src="./images main/byte_logo.png"/></a>
+                        <a href="./main.html"><img src="/public/img/byte_logo.png"/></a>
                         <span class = "link"> <a style = "color: beige; text-decoration: none" href = "./main.html"> byte. </a> </span>
                     </div>
                 </div>
@@ -23,7 +23,7 @@
                         <div class="profileicon">
                             <div class="profileiconholder">
                                 <a href="./profilepage2.html">
-                                <img src="./images main/pfp.jpg"/>
+                                <img src="/public/img/pfp.jpg"/>
                                 </a>
                             </div>
                         </div>
@@ -49,7 +49,7 @@
                         <h5> b/WebDevelopment </h5>
                     </div>
                     <div class ="userpfp">
-                        <a href="profilepage1.html"> <img class="userimg" src="./images main/AYAKA.jpg"> </a>
+                        <a href="./profilepage1.html"> <img class="userimg" src="/public/img/AYAKA.jpg"> </a>
                     </div>
                 <div class="postuserinfo"> 
                     <p> Wala_3h <br><span>u/WalaEh</span><br> Bits: 1</p>
@@ -70,7 +70,7 @@
             <div class="replybox">
                 <div class = "replyinfo"> 
                     <div class="replypfp"> 
-                        <a href="profilepage2.html"> <img class="userimg" src="./images main/pfp.jpg"> </a>
+                        <a href="./profilepage2.html"> <img class="userimg" src="/public/img/pfp.jpg"> </a>
                     </div>
                     <p> gojowithiphone <br><span> u/gojo1234 </span><br> Bits: Infinite</p>
                     <div class="postdate"> 
