--- a/views/samplepost4.html
+++ b/views/samplepost4.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title> View post </title>
-    <link rel="stylesheet" type="text/css" href="viewpost.css" />
+    <link rel="stylesheet" type="text/css" href="/public/css/viewpost.css" />
 </head>
 
 <body>
@@ -12,7 +12,7 @@
             <div class = "headercontent">
                 <div class="headerhome">
                     <div class="websitelogo">
-                        <a href="./main.html"><img src="./images main/byte_logo.png"/></a>
+                        <a href="./main.html"><img src="/public/img/byte_logo.png"/></a>
                         <span class = "link"> <a style = "color: beige; text-decoration: none" href = "./main.html"> byte. </a> </span>
                     </div>
                 </div>
@@ -24,7 +24,7 @@
                         <div class="profileicon">
                             <div class="profileiconholder">
                                 <a href="./profilepage2.html">
-                                <img src="./images main/pfp.jpg"/>
+                                <img src="/public/img/pfp.jpg"/>
                                 </a>
                             </div>
                         </div>
@@ -50,7 +50,7 @@
                     <h5> b/PCBuilding </h5>
                 </div>
                 <div class ="userpfp">
-                    <a href="profilepage4.html"> <img class="userimg" src="./images main/goatkotsu.png"> </a>
+                    <a href="./profilepage4.html"> <img class="userimg" src="/public/img/goatkotsu.png"> </a>
                     
                 </div>
                 <div class="postuserinfo"> 
@@ -85,7 +85,7 @@
             <div class="replybox">
                 <div class = "replyinfo"> 
                     <div class="replypfp"> 
-                        <a href="profilepage5.html"> <img class="userimg" src="./images main/lumpiangtoge.jpg"> </a>
+                        <a href="./profilepage5.html"> <img class="userimg" src="/public/img/lumpiangtoge.jpg"> </a>
                     </div>
                     <p> LumpiangToge <br><span class="userhandle"> u/tunamayo</span><br> Bits: tuna </p>
                     <div class="postdate">
