--- a/views/main.hbs
+++ b/views/main.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title> {{title}} </title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/public/css/main.css">
 </head>
 <body>
     {{{body}}}
