--- a/views/samplepost1.html
+++ b/views/samplepost1.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title> View post </title>
-    <link rel="stylesheet" type="text/css" href="/public/css/viewpost.css" />
+    <title> Post </title>
+    <link rel="stylesheet" type="text/css" href="../public/css/viewpost.css"/>
+    <script src="../public/js/posts.js" defer></script>
 </head>
-
 <body>
     <div class="homecontainer">
         <div class = "webheader">
             <div class = "headercontent">
                 <div class="headerhome">
                     <div class="websitelogo">
-                        <a href="./main.html"><img src="/public/img/byte_logo.png"/></a>
+                        <a href="./main.html"><img src="../public/img/byte_logo.png"/></a>
                         <span class = "link"> <a style = "color: beige; text-decoration: none" href = "./main.html"> byte. </a> </span>
                     </div>
                 </div>
@@ -23,7 +23,7 @@
                         <div class="profileicon">
                             <div class="profileiconholder">
                                 <a href="./profilepage2.html">
-                                <img src="/public/img/pfp.jpg"/>
+                                <img src="../public/img/pfp.jpg"/>
                                 </a>
                             </div>
                         </div>
@@ -49,7 +49,7 @@
                         <h5> b/WebDevelopment </h5>
                     </div>
                     <div class ="userpfp">
-                        <a href="./profilepage1.html"> <img class="userimg" src="/public/img/AYAKA.jpg"> </a>
+                        <a href="profilepage1.html"> <img class="userimg" src="../public/img/AYAKA.jpg"> </a>
                     </div>
                 <div class="postuserinfo"> 
                     <p> Wala_3h <br><span>u/WalaEh</span><br> Bits: 1</p>
@@ -59,18 +59,40 @@
                     <p> 8 days ago </p>
                 </div>
             </div>
+            
             <div class="postinfocontainer">
                 <h4> MDN is very convenient </h4>
                 <p> It really helped us in creating this website! It gave a fast and easy way to access information to different elements. ^_^ </p>
+                <!--<div class="replybutton"> <a href=""> Reply </a> </div>
+                <div class="replyinput"><input type="text" /> </div>  -->
+                <div class="footer">
+                    <div class="upbit">
+                        <img src="../public/img/up-arrow-regular-24.png"/>
+                    </div>
+                    <div class="downbit">
+                        <img src="../public/img/down-arrow-regular-24.png"/>
+                    </div>
+                    <div class="share">
+                        <img src="../public/img/share-regular-24.png"/>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+        <div class="replyinputarea"> 
+            
+            <div class="replyinputbox">
+                <input type="text" id="replytextcontent" placeholder="Reply to this post..."/> 
                 <div class="replybutton"> <a href=""> Reply </a> </div>
             </div>
+            
         </div>
-
+        </div>
         <div class="replycontainer"> 
             <div class="replybox">
                 <div class = "replyinfo"> 
                     <div class="replypfp"> 
-                        <a href="./profilepage2.html"> <img class="userimg" src="/public/img/pfp.jpg"> </a>
+                        <a href="profilepage2.html"> <img class="userimg" src="../public/img/pfp.jpg"> </a>
                     </div>
                     <p> gojowithiphone <br><span> u/gojo1234 </span><br> Bits: Infinite</p>
                     <div class="postdate"> 
