--- a/views/samplepost1.html
+++ b/views/samplepost1.html
@@ -83,9 +83,9 @@
             
             <div class="replyinputbox">
                 <input type="text" id="replytextcontent" placeholder="Reply to this post..."/> 
-                <div class="replybutton"> <a href=""> Reply </a> </div>
+                
             </div>
-            
+            <div class="replybutton"> <a href=""> Reply </a> </div>
         </div>
         </div>
         <div class="replycontainer"> 
@@ -104,7 +104,19 @@
                 
                 <div class="replycontent"> 
                     <p> yes <br> </p>
-                    <div class="replybutton"> <a href=""> Reply </a></div>
+                    
+                <div class="footer">
+                    <div class="upbit">
+                        <img src="../public/img/up-arrow-regular-24.png"/>
+                    </div>
+                    <div class="downbit">
+                        <img src="../public/img/down-arrow-regular-24.png"/>
+                    </div>
+                    <div class="share">
+                        <img src="../public/img/share-regular-24.png"/>
+                    </div>
+                    <div class="replybutton"><a href=""> Reply </a></div>
+                </div>
                 </div>
             </div>
         </div>
